[gd_scene load_steps=9 format=3 uid="uid://cgorna674yjsn"]

[ext_resource type="Script" path="res://Level/Level.gd" id="1_epjow"]
[ext_resource type="Texture2D" uid="uid://dk03a6brvjeve" path="res://assets/branch.png" id="2_2d7vl"]
[ext_resource type="PackedScene" uid="uid://bkm4mr6ysiayc" path="res://Level/analyzer.tscn" id="2_5ky0k"]
[ext_resource type="PackedScene" uid="uid://164nkmlea44s" path="res://Level/goal.tscn" id="3_265ib"]
[ext_resource type="Texture2D" uid="uid://bmsb45oxo81u7" path="res://assets/nest.png" id="3_vax1h"]
[ext_resource type="PackedScene" uid="uid://2lf0g2no4dbp" path="res://Level/info.tscn" id="4_3le2t"]
[ext_resource type="PackedScene" uid="uid://cr0tal12xa4ah" path="res://Level/available_birds.tscn" id="5_dp82h"]
[ext_resource type="Texture2D" uid="uid://qiwhkfnnumm1" path="res://assets/done.png" id="6_s2mqa"]

[node name="Level" type="Node2D"]
script = ExtResource("1_epjow")

[node name="Background" type="ColorRect" parent="."]
offset_top = 50.0
offset_right = 1520.0
offset_bottom = 1017.0
mouse_filter = 2
color = Color(0.439216, 0.698039, 0.909804, 1)

[node name="Branch" type="TextureRect" parent="."]
offset_top = 175.0
offset_right = 1520.0
offset_bottom = 1249.0
texture = ExtResource("2_2d7vl")
expand_mode = 1
stretch_mode = 4

[node name="Nest" type="TextureRect" parent="."]
offset_left = -109.0
offset_top = 130.0
offset_right = 1660.0
offset_bottom = 1078.0
mouse_filter = 2
texture = ExtResource("3_vax1h")
expand_mode = 1
stretch_mode = 4

[node name="Goal" parent="." instance=ExtResource("3_265ib")]
offset_top = 46.0
offset_right = 0.0
offset_bottom = 46.0

[node name="Info" parent="." instance=ExtResource("4_3le2t")]
visible = false
offset_left = 1200.0
offset_top = 46.0
offset_right = 1200.0
offset_bottom = 46.0

[node name="Available_birds" parent="." instance=ExtResource("5_dp82h")]
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = 1520.0
offset_right = 1920.0
grow_vertical = 1
size_flags_horizontal = 8

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1520.0
offset_bottom = 50.0
color = Color(1, 1, 1, 0.258824)

[node name="Options" type="HBoxContainer" parent="."]
offset_right = 1520.0
offset_bottom = 50.0

[node name="Menu" type="Button" parent="Options"]
layout_mode = 2
tooltip_text = "Go back to the main menu"
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = " Menu "

[node name="Clear" type="Button" parent="Options"]
layout_mode = 2
tooltip_text = "Remove all birds from the screen"
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = " Clear screen "

[node name="Reset" type="Button" parent="Options"]
layout_mode = 2
tooltip_text = "Restart the level, all birds will be forgotten"
focus_mode = 0
theme_override_font_sizes/font_size = 25
text = " Reset level "

[node name="V_Center" type="VBoxContainer" parent="Options"]
layout_mode = 2
alignment = 1

[node name="Star" type="RichTextLabel" parent="Options/V_Center"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
bbcode_enabled = true
text = " Star: Find the Null with ? birds or less"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Done" type="TextureRect" parent="Options"]
layout_mode = 2
texture = ExtResource("6_s2mqa")
stretch_mode = 5

[node name="Analyze" type="Button" parent="."]
visible = false
offset_left = 1360.0
offset_top = 390.0
offset_right = 1495.0
offset_bottom = 456.0
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = " Analyze "

[node name="Birds" type="Node" parent="."]

[node name="Analyzer" parent="." instance=ExtResource("2_5ky0k")]
visible = false
z_index = 1
offset_left = 542.0
offset_top = 297.0
offset_right = 542.0
offset_bottom = 297.0

[connection signal="bird_selected" from="Available_birds" to="." method="_on_available_birds_bird_selected"]
[connection signal="pressed" from="Options/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Options/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Options/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Analyze" to="." method="_on_analyze_pressed"]
[connection signal="bird_found" from="Analyzer" to="." method="_on_analyzer_bird_found"]
